# opendocument-rs

./: Cargo.toml  README.md
sample_data/: example.odt
src/: document.rs
tests/: basic.rs
