[package]
name = "opendocument"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.5.2"
xmltree = { "git" = "https://github.com/jmage-rs/xmltree-rs.git" }

[dev-dependencies]
tempfile = "3.0.8"
